[gd_scene load_steps=4 format=3 uid="uid://bis1rdbnwvbpb"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_6sr2t"]
[ext_resource type="AudioStream" uid="uid://b5b61a1t1xx87" path="res://Sound/Powerup4.wav" id="7_i637j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_whhgd"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6sr2t")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_whhgd")

[node name="Weapons" type="Node2D" parent="."]

[node name="HPBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -25.0
offset_right = 16.0
offset_bottom = -21.0
show_percentage = false

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.06

[node name="LevelupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_i637j")
bus = &"SFX"

[node name="Passives" type="Node2D" parent="."]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
